--- a/experiment5.html
+++ b/experiment5.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 align="center">Student Registration Form</h1>
-    <form action="./response.html" target="_blank" name="Hotel Room Booking Form" method="">
+    <form action="./response.html" target="_blank" name="Student Registration Form" method="post">
         <fieldset>
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" placeholder="Enter your name" required>
